# projectwithsubproject_cmake

./: CMakeLists.txt  check_for_changes.cmake  check_for_changes_date.cmake  main.cpp
webassembly/: CMakeLists.txt  JsBridge.cpp  JsBridge.h  main.cpp  main.qml  qml.qrc
